<resources>
    <string name="app_name">BookSharingApp</string>
    <string name="link_register"><font color="#FFF29D38"><b>Zaregistrujte se.</b></font></string>
    <string name="btn_login">Přihlásit se</string>
    <string name="hint_password">Heslo</string>
    <string name="hint_password_reg">Heslo *</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_email_reg">E-mail pro komunikaci *</string>
    <string name="hint_email_registration">E-mail *</string>
    <string name="name_login">Přihlášení</string>
    <string name="link_forgotten_password">Zapomněli jste heslo?</string>
    <string name="name_register">Registrace</string>
    <string name="hint_username_reg">Uživatelské jméno *</string>
    <string name="hint_phone_reg">Telefonní číslo</string>
    <string name="hint_password_repeat_reg">Zopakujte heslo *</string>
    <string name="btn_register">Zaregistrovat se</string>
    <string name="hint_birthday_reg">Datum narození (RRRR-MM-DD)*</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_logout">Odhlásit se</string>
    <string name="txt_to_reg_link">Ještě nemáte účet?</string>
    <string name="text_to_login_link">Máte již účet?</string>
    <string name="link_to_login"><font color="#FFF29D38"><b>Přihlašte se zde.</b></font></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hint_actual_password_change">Aktuální heslo</string>
    <string name="hint_new_password_change">Nové heslo</string>
    <string name="hint_new_password_again_change">Zopakujte nové heslo</string>
    <string name="btn_change_password">Změnit heslo</string>
    <string name="slider_values_range">Zdarma - %d Kč/den</string>
    <string name="max_borrowed_time_string">"%d dní</string>
    <string name="value_free">Zdarma</string>
    <string name="filter_name">Filtr</string>
    <string name="escape_close_button">escape</string>
    <string name="delete_filter_button">Vymazat</string>
    <string name="price_hint">Cena</string>
    <string name="author_hint">Jméno autora</string>
    <string name="genres_hint">Žánry knih</string>
    <string name="genres_hint_req">Žánry knih *</string>
    <string name="povidka">Povídka</string>
    <string name="roman">Román</string>
    <string name="biografie">Biografie</string>
    <string name="poezie">Poezie</string>
    <string name="drama">Drama</string>
    <string name="publicistika">Publicistika</string>
    <string name="komiks">Komiks</string>
    <string name="literatura_pro_deti_a_mladez">Literatura pro děti a mládež</string>
    <string name="baje_myty_a_povesti">Báje, mýty a pověsti</string>
    <string name="divci_roman">Dívčí román</string>
    <string name="fantasy">Fantasy</string>
    <string name="scifi">Sci-fi</string>
    <string name="detektivka">Detektivka</string>
    <string name="roman_pro_zeny">Román pro ženy</string>
    <string name="cestopis">Cestopis</string>
    <string name="humor_a_satira">Humor a satira</string>
    <string name="literatura_faktu">Literatura faktu</string>
    <string name="erotika">Erotika</string>
    <string name="horror">Horror</string>
    <string name="borrow_options_hint">Možnosti zapůjčení</string>
    <string name="borrow_options_hint_req">Možnosti zapůjčení *</string>
    <string name="personal">Osobní předání</string>
    <string name="mail_it">Zaslání na odběrné místo</string>
    <string name="availability">Dostupnost knih</string>
    <string name="free">Volné</string>
    <string name="borrowed">Vypůjčené</string>
    <string name="Filter_it_button">Filtrovat</string>
    <string name="filter_icon">filterIcon</string>
    <string name="book_image">Book image</string>
    <string name="book_name">book_name</string>
    <string name="book_author">book_author</string>
    <string name="book_price">book_price</string>
    <string name="book_availability">book_availability</string>
    <string name="owner_name">owner name</string>
    <string name="booksharing">Booksharing</string>
    <string name="email_placeholder">youremail@seznam.cz</string>
    <string name="notification">notification</string>
    <string name="avatar">avatar</string>
    <string name="main_page">Hlavní strana</string>
    <string name="my_profile">Můj profil</string>
    <string name="notifications">Oznámení</string>
    <string name="add_book">Přidat knihu</string>
    <string name="my_books">Moje knihy</string>
    <string name="change_password">Změnit heslo</string>
    <string name="logout">Odhlásit se</string>
    <string name="author_hint_req">Jméno autora *</string>
    <string name="book_name_hint_req">Název knihy *</string>
    <string name="book_state_hint_req">Stav knihy *</string>
    <string name="book_info_hint_unreq">Krátký popis knihy</string>
    <string name="place_handover_hint_req">Místo předání *</string>
    <string name="price_hint_req">Cena výpůjčky *</string>
    <string name="free_radioButton">Zdarma</string>
    <string name="price_list_radioButton">Ceník</string>
    <string name="price_text">Kč/den</string>
    <string name="price_range">1–100</string>
    <string name="access_hint_req">Přístupnost *</string>
    <string name="adult_radioButton">Pro dospělé</string>
    <string name="all_radioButton">Pro všechny</string>
    <string name="days_text">dní</string>
    <string name="max_days_add">7–365</string>
    <string name="max_borrow_length_hint_req">Max. délka zapůjčení *</string>
    <string name="state_of_book_example">př.: stará, nová, ohlé rohy,...</string>
    <string name="book_photo_description">fotografie knihy</string>
    <string name="btn_add_book">btn_add_book</string>
    <string name="book_name_placeholder">Nadpis</string>
    <string name="notify_me">Upozornit mě</string>
    <string name="author_placeholder">autor</string>
    <string name="book_cover">book_cover</string>
    <string name="personal_handover">Osobní předání</string>
    <string name="send_to_post">Zaslání na odběrné místo</string>
    <string name="free_loan">Půjčka zdarma</string>
    <string name="adult_only">Pouze pro dospělé</string>
    <string name="check_uncheck">check_uncheck</string>
    <string name="report">report</string>
    <string name="report_text">Nahlásit</string>
    <string name="owner">Majitel/ka:</string>
    <string name="hanoder_place_text">Místo předání:</string>
    <string name="genres_text">Žánr:</string>
    <string name="navigation">navigation</string>
    <string name="place_example">Jihlava, Masarykovo náměstí, Morový sloup</string>
    <string name="book_info_text">Popis knihy:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.</string>
    <string name="loan_price_text">Cena výpůjčky:</string>
    <string name="free_text">Zdarma</string>
    <string name="condition_text">Stav knihy:</string>
    <string name="condition_example">Zachovalá, ohlé rohy</string>
    <string name="access_text">Přístupnost:</string>
    <string name="for_all_Example">Pro všechny</string>
    <string name="max_borrow_time_text">Max. doba výpůjčky:</string>
    <string name="max_time_example">90 dní</string>
    <string name="ask_to_borrow">Požádat</string>
    <string name="report_hint">Napište zde, jaký je problém s danou knihou</string>
    <string name="report_title">Report</string>
    <string name="report_btn">Nahlásit</string>
    <string name="example_date">19.12.2022</string>
    <string name="placeholder_name_of_evaluator">the name of the evaluator</string>
    <string name="lorem_ipsum_shorter">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="my_handover_place">Místo pro předání knihy</string>
    <string name="my_psc">PSČ</string>
    <string name="store_contacts">Uložit</string>
    <string name="username_placeholder">username</string>
    <string name="hint_for_contacts">Kontaktní údaje tohoto uživatele neuvidíte, dokud mezi sebou nepotvrdíte výměnu knih.</string>
    <string name="my_contacts_hint">Vaše údaje budou zobrazeny pouze uživatelům, se kterými si budete vyměňovat knihy.</string>
    <string name="e_mail">E-mail:</string>
    <string name="booksharing_seznam_cz">booksharing@seznam.cz</string>
    <string name="phone_text">Telefonní číslo:</string>
    <string name="phone_number_example">689 512 471</string>
    <string name="handover_place_text">Místo předání:</string>
    <string name="handover_place_example">Jihlava, Masarykovo náměstí, Morový sloup</string>
    <string name="psc_text">PSČ:</string>
    <string name="psc_example">586 01</string>
    <string name="no_reviews_text">Tento profil zatím neobdržel žádné recenze.</string>
    <string name="no_books_text">Na tomto profilu nejsou půjčovány žádné knihy.</string>
    <string name="some_book_title">some_book_title</string>
    <string name="unborrowed_books">Volné knihy</string>
    <string name="borrowed_books">Vypůjčené knihy</string>
    <string name="menu_edit">Editovat</string>
    <string name="menu_delete">Odstranit</string>
    <string name="return_early_book">Vrátit</string>
    <string name="return_soon">Vrátit knihu</string>
    <string name="returned_soon">Kniha byla úspěšně vrácena.</string>
    <string name="never_borrowed">Kniha nebyla vůbec vypůjčena.</string>
    <string name="confirm_btn">Potvrdit</string>
    <string name="storno_btn">Storno</string>
    <string name="my_account">Můj účet</string>
    <string name="delete_account">Odstranit účet</string>
    <string name="delete_account_info">Chcete-li odstranit Váš účet, je potřeba aby jste prvně vrátili všechny knihy, které jste si půjčili a také je potřeba aby jste žádnou vlastní knihu neměli vypůjčenou.</string>
    <string name="are_u_sure">Opravdu chcete odstranit Váš účet?</string>
    <string name="cancel_borrow_or_notification">Zrušit požadavek</string>
    <string name="request_to_borrow_book">Požádat o výpůjčku?</string>
    <string name="info_borrow_book">Dostanete oznámení, jakmile majitel/ka knihy potvrdí Vaši žádost.</string>
    <string name="accept_str">Přijmout</string>
    <string name="reject_str">Odmítnout</string>
    <string name="borrow_book_example">AnonymFolk123 žádá o vypůjčení knihy A Game of Thrones</string>
    <string name="borrow_book_text"><![CDATA[<b>%1$s</b> žádá o vypůjčení knihy <b>%2$s</b>.]]></string>
    <string name="evaluate_user_text"><![CDATA[Ohodnoťte uživatele <b>%1$s</b>.]]></string>
    <string name="evaluate_user_book_name_text"><![CDATA[kniha: <b>%1$s</b>]]></string>
    <string name="contact_borrower_text"><![CDATA[Kontaktujte půjčujícího a domluvte se na výměně knihy: <b>%1$s</b>.]]></string>
    <string name="contact_owner_text"><![CDATA[Kontaktujte majitele a domluvte se na výměně knihy: <b>%1$s</b>.]]></string>
    <string name="book_name_got_placeholder">A Games of Thrones</string>
    <string name="book_rejected_text"><![CDATA[Vaše žádost o půjčku <b>%1$s</b> byla zamítnuta uživatelem <b>%2$s</b>.]]></string>
    <string name="placeholder_for_name">AnonymFolk123</string>
</resources>