<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_to_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_page"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/my_profile"/>

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/nav_add_book"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/add_book"/>

        <item android:title="@string/my_account">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_change_password"
                    android:icon="@drawable/ic_baseline_lock_reset_24"
                    android:title="@string/change_password"/>

                <item
                    android:id="@+id/nav_delete_account"
                    android:icon="@drawable/ic_baseline_no_accounts_24"
                    android:title="@string/delete_account"/>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout"/>
                </group>
            </menu>
        </item>

    </group>

</menu>