<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".ui.home.filter.FilterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/closeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/escape_close_button" />

            <TextView
                android:id="@+id/filterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/deleteFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_filter_button"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_below="@+id/headerView"
        android:layout_above="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorBackground">

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:labelFor="@+id/priceSlider"
            android:paddingLeft="8dp"
            android:paddingTop="20dp"
            android:text="@string/price_hint"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceRangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:text="@string/value_free"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle" />

    <TextView
        android:id="@+id/authorNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:labelFor="@+id/priceSlider"
        android:paddingLeft="8dp"
        android:text="@string/author_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceSlider" />

    <EditText
        android:id="@+id/filterAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorNameText" />

    <TextView
        android:id="@+id/genresText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:labelFor="@+id/priceSlider"
        android:paddingTop="10dp"
        android:paddingLeft="8dp"
        android:text="@string/genres_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterAuthor" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genresText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/povidka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/povidka" />

                <CheckBox
                    android:id="@+id/roman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/roman" />

                <CheckBox
                    android:id="@+id/biografie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biografie"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/poezie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/poezie" />

                <CheckBox
                    android:id="@+id/drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drama"
                    android:layout_marginRight="10dp"/>

                <CheckBox
                    android:id="@+id/publicistika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publicistika"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/komiks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/komiks" />

                <CheckBox
                    android:id="@+id/literatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/literatura_pro_deti_a_mladez"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/baje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/baje_myty_a_povesti" />


                <CheckBox
                    android:id="@+id/divci_romany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/divci_roman" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/fantasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/fantasy" />

                <CheckBox
                    android:id="@+id/sci_fi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/scifi" />

                <CheckBox
                    android:id="@+id/detektivka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detektivka"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/roman_pro_zeny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/roman_pro_zeny" />

                <CheckBox
                    android:id="@+id/cestopis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cestopis"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/humor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/humor_a_satira" />

                <CheckBox
                    android:id="@+id/literatura_faktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/literatura_faktu" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/erotika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/erotika" />

            <CheckBox
                android:id="@+id/horror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/horror" />

        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/borrowOptionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:labelFor="@+id/priceSlider"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:text="@string/borrow_options_hint"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayoutBorrowOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borrowOptionsText">

            <CheckBox
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal" />

            <CheckBox
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_it" />


        </LinearLayout>

        <TextView
            android:id="@+id/availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:labelFor="@+id/priceSlider"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:text="@string/availability"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBorrowOptions" />

        <LinearLayout
            android:id="@+id/linearLayoutAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availability">

            <CheckBox
                android:id="@+id/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />

            <CheckBox
                android:id="@+id/borrowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrowed" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/lowGrey">

        <Button
            android:id="@+id/filterButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Filter_it_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>