<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:background="?attr/colorCard"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:src="@drawable/book_placeholder"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author"
                    android:textSize="16sp"
                    android:paddingTop="7dp"/>

                <TextView
                    android:id="@+id/book_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/book_price"
                    android:textSize="15sp"
                    android:paddingTop="7dp"/>

                <TextView
                    android:id="@+id/book_availability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_availability"
                    android:textSize="15sp"
                    android:paddingTop="7dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/owner_name"
                android:textSize="16sp"
                android:paddingLeft="7dp"/>

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX=".8"
                android:scaleY=".8"
                android:stepSize="0.5"
                android:progressTint="@color/orange"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

